# linkshield_backend

./: .env.example  .gitignore  Dockerfile  FINAL_VERIFICATION.md  IMPLEMENTATION_COMPLETE.md  MANIFEST.in  Makefile  README.md  USAGETYPE_FIX.md  alembic.ini  app.py  conftest.py  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  setup.py  static_analysis_report.md  test_ip_spoofing.py  test_models_fix.py  test_models_simple.py  test_pydantic_fix.py
.kiro/steering/: product.md  structure.md  tech.md
.trae/rules/: project_rules.md
alembic/: env.py
alembic/versions/: 002_add_admin_models.py  003_add_background_task_models.py  005_add_alert_instance_model.py
client_architecture/: AGENT_READY_SPECS_SUMMARY.md  COMPLETION_SUMMARY.md  COMPREHENSIVE_SPEC_GUIDE.md  FINAL_COMPLETION_STATUS.md  FINAL_STATUS_REPORT.md  IMPLEMENTATION_READY_REPORT.md  PROGRESS_REPORT.md  SPEC_REVIEW_SUMMARY.md  SPEC_UPDATE_STATUS.md  app-spec.md  artifact.md  artifact_2.md
client_architecture/ai-analysis/: design.md  requirements.md  tasks.md
client_architecture/api-keys/: design.md  requirements.md  tasks.md
client_architecture/authentication/: design.md  requirements.md  tasks.md
client_architecture/dashboard/: components.md  design.md  requirements.md  tasks.md  wireframes.md
client_architecture/email-verification/: design.md  requirements.md  tasks.md
client_architecture/homepage-url-checker/: components.md  design.md  requirements.md  tasks.md  wireframes.md
client_architecture/profile-settings/: design.md  requirements.md  tasks.md
client_architecture/reports/: design.md  requirements.md  tasks.md
client_architecture/sessions/: design.md  requirements.md  tasks.md
client_architecture/social-protection/: design.md  requirements.md  tasks.md
client_architecture/subscriptions/: design.md  plan-gating.md  requirements.md  six-tier-requirements.md  tasks.md
client_architecture/url-analysis/: design.md  requirements.md  tasks.md
client_architecture/web-developer-monitoring/: design.md  requirements.md  tasks.md
docs/: BusinessAnalysis.md  CHANGELOG.md  README.md  RUNBOOK.md  admin_feature.md  admin_section_documentation.md  ai_features.md  api_reference.md  architecture.md  async-sqlalchemy-migration-summary.md  auth_flow.md  compliance_security.md  dashboard-models-implementation-summary.md  deapseal.md  env_variables.md  extension-telemetry-implementation.md  payments_integration.md  redis_service_token_storage.md  subscriptions_plans.md  user_workflows.md
docs/api/: README.md  authentication.md  data-models.md  error-handling.md  openapi.json  rate-limiting.md  social_protection_health.md
docs/client/: README.md  accessibility.md  api-integration.md  architecture.md  component-patterns.md  development-workflow.md  feature-guidelines.md  performance.md  project-structure.md  routing.md  security.md  state-management.md  tech-stack.md
docs/database/: admin-schema.md
docs/extension/: README.MD  specification.md
docs/features/: ai_reputation.md  deepscans.md  fact-check-lookup-implementation.md  gen_1.md  gen_2.md  gen_3.md  linkshield.md  ml-spam-detection.md
docs/security/: SECURITY_SYSTEM_DOCUMENTATION.md  TESTING_PROCEDURES.md  admin-audit-system.md  csp-implementation.md  discord-webhook-authentication.md
docs/social_media_shield/: bots.md  pricing_strategy.md  twitter.md
docs/social_protection/: migration-guide.md  structured-logging-implementation.md
docs/utilities/: admin-helpers.md
prompts/: documentation.md  prompt.md  prompt_1.md  prompt_2.md  routes.md  social_bot.md  status.md
reports/: compliance_report.json  final_security_validation_report.md
scripts/: compliance_checker.py  fix_all_imports.py  fix_imports.py  manage_bots.py  security_validation.py  validate_dashboard_models.py
specs/: analysis-results-refactor-summary.md
src/: __init__.py
src/alembic/: env.py
src/auth/: bot_auth.py  service_token_storage.py
src/authentication/: auth_service.py  dependencies.py
src/bots/: __init__.py  error_handler.py  gateway.py  lifecycle.py  models.py  registration.py  startup.py
src/config/: database.py  settings.py  social_protection_config.yaml
src/controllers/: __init__.py  admin_controller.py  ai_analysis_controller.py  base_controller.py  bot_controller.py  dashboard_controller.py  dashboard_models.py  depends.py  health_controller.py  report_controller.py  subscription_controller.py  url_check_controller.py  user_controller.py  webhook_controller.py
src/exceptions/: subscription_exceptions.py
src/linkshield/: __init__.py  main.py  version.py
src/models/: __init__.py  (+14 more)
tests/: test_algorithm_health_analyzers.py  test_app.py  test_bot_controller_methods.py  test_bot_error_handler.py  test_bot_gateway.py  test_bot_models.py  test_bot_registration_integration.py  test_bot_registration_simple.py  test_broken_link_functionality.py  test_community_notes_analyzer.py  test_community_notes_fact_check.py  test_content_risk_analyzer.py  test_content_risk_analyzer_ai.py  test_crisis_detector.py  test_crisis_detector_unit.py  test_discord_adapter.py  test_discord_bot_handler.py  test_extension_data_processor.py  test_extension_rate_limiting.py  test_extension_telemetry.py  test_link_penalty_detector.py  test_linkedin_adapter.py  test_meta_adapter.py  test_social_protection_controllers.py  test_social_protection_dashboard.py  test_social_protection_health.py  test_social_protection_integration.py  test_social_protection_models.py  test_social_protection_performance.py  test_social_protection_security.py  test_social_protection_services.py  test_social_scan_service.py  test_spam_pattern_detector.py  test_structured_logging.py  test_subscription_controller.py  test_telegram_adapter.py  test_telegram_bot_handler.py  test_tiktok_adapter.py  test_twitter_adapter.py  test_twitter_bot_handler.py  (+3 more)
(+355 files in other folders)
